--- a/MaterialDesign.DialogPlus.Examples/MainWindow.xaml
+++ b/MaterialDesign.DialogPlus.Examples/MainWindow.xaml
@@ -1,10 +1,7 @@
 ﻿<Window x:Class="MaterialDesign.DialogPlus.Examples.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mdix="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
 
     <mdix:DialogHost>
@@ -14,6 +11,7 @@
             <StackPanel Margin="20">
                 <Button Content="Basic dialog" Click="BasicDialogButton_Click" Margin="20"/>
                 <Button Content="Basic dialog (with cancellation)" Click="BasicDialogButtonWithCancellation_Click" Margin="20"/>
+                <Button Content="Form input" Click="FormInputDialogButton_Click" Margin="20"/>
             </StackPanel>
         </DockPanel>
     </mdix:DialogHost>
